Closed Bug 1907378 Opened 9 months ago Closed 9 months ago

Default Codec Preferences is not correct with H264 always being prioritized

Categories

(Core :: WebRTC: Audio/Video, defect)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox130 --- fixed

People

(Reporter: dbaker, Assigned: dbaker)

References

(Regressed 1 open bug)

Details

Attachments

(1 file)

H264 is being pushed to the front of the preferred video codecs.

STR:

Actual Result:

  • Notice that H264 is negotiated ignoring selection.

Expected Result:

  • Selected codec will be used.

In early Android days, H.264 is the best choice of video codec
for WebRTC because it's available on most devices. This is no
long the case.

The patch only stops strongly preferring H.264 on Android, which overrides user preference. The default codec list should be further improved according to codec support on device capabilities such as HW acceleration. Filed bug 1909557 to follow up.

See Also: → 1909557
Pushed by jolin@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bdf8d54bca2f do not always prefer H.264 on Android for WebRTC. r=dbaker
Status: NEW → RESOLVED
Closed: 9 months ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
Regressions: 1948327
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: