Bug 1907378 - do not always prefer H.264 on Android for WebRTC. r=dbaker

In early Android days, H.264 is the best choice of video codec
for WebRTC because it's available on most devices. This is no
long the case.

Differential Revision: https://phabricator.services.mozilla.com/D217503